--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -62,35 +62,21 @@
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/searchField"
             app:layout_constraintTop_toBottomOf="@+id/searchField" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            style="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="32sp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="@+id/textPopular"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/textPopular"
-            app:layout_constraintTop_toBottomOf="@+id/textPopular">
-
-            <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/fpopularRecycleView"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_marginTop="64dp"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="32dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.0"
-                        app:layout_constraintTop_toBottomOf="@+id/searchField"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
-        </LinearLayout>
+       <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fpopularRecycleView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="8dp"
+       android:layout_weight="1"
+       android:divider="#FFCC00"
+       android:dividerHeight="4dp"
+           android:orientation="horizontal"
+           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+       app:layout_constraintEnd_toEndOf="@+id/textPopular"
+       app:layout_constraintHorizontal_bias="1.0"
+       app:layout_constraintStart_toStartOf="@+id/textPopular"
+       app:layout_constraintTop_toBottomOf="@+id/textPopular"/>
 
         <TextView
             android:id="@+id/textRecommended"
@@ -109,38 +95,28 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="@+id/fpopularRecycleView"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/linearLayout"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintStart_toStartOf="@+id/fpopularRecycleView"
+            app:layout_constraintTop_toBottomOf="@+id/fpopularRecycleView" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout1"
-            style="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="32sp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="@+id/textRecommended"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/textRecommended"
-            app:layout_constraintTop_toBottomOf="@+id/textRecommended">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/RecycleView_rec"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="64dp"
-                android:orientation="vertical"
-                android:layout_marginBottom="32dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintTop_toBottomOf="@+id/searchField"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recoRecycleView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="32dp"
+        android:layout_weight="1"
+        android:divider="#FFCC00"
+        android:dividerHeight="4dp"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginBottom="32sp"
+        app:layout_constraintEnd_toEndOf="@+id/textRecommended"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textRecommended"
+        app:layout_constraintTop_toBottomOf="@+id/textRecommended"/>
 
-        </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
