--- a/app/src/main/res/layout/method_fragment.xml
+++ b/app/src/main/res/layout/method_fragment.xml
@@ -13,10 +13,11 @@
         android:layout_marginTop="32dp"
         android:layout_marginStart="10sp"
         android:textSize="22sp"
+
         android:textColor="@color/black"
         android:textStyle="bold"
         android:text="Available methods"
-        android:gravity="start"
+        android:gravity="center"
         android:layout_marginBottom="5sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,27 +27,30 @@
         android:id="@+id/searchField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f3f3f3"
+        android:background="#f2f2f2"
         android:textAlignment="textStart"
-        android:layout_marginBottom="5sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/fpText"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/fpText"
         app:layout_constraintTop_toBottomOf="@+id/fpText"
-        android:layout_marginStart="10sp"
-        android:layout_marginEnd="10sp" />
+        android:layout_marginStart="32sp"
+        android:layout_marginEnd="32sp"  />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fpRecycleView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintTop_toBottomOf="@+id/searchField"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_weight="2"
+        android:divider="#000"
+        android:dividerHeight="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/searchField"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/searchField"
+        app:layout_constraintTop_toBottomOf="@+id/searchField"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
